RESOLVED FIXED13654
REGRESSION: Fieldset stretches too much because minwidth is wrong.
https://bugs.webkit.org/show_bug.cgi?id=13654
Summary REGRESSION: Fieldset stretches too much because minwidth is wrong.
Dave Hyatt
Reported 2007-05-10 04:37:03 PDT
In the attached test case, the fieldset has a minwidth that is bigger than other browsers. Clear whitespace breaking opportunities exist, and yet they are somehow not being factored into the minwidth. This is a regression caused by http://bugs.webkit.org/show_bug.cgi?id=8438 although I think it just exposed a min width bug.
Attachments
Reduction (1.47 KB, text/html)
2007-05-10 04:37 PDT, Dave Hyatt
no flags
This fixes it. (1.04 KB, patch)
2007-05-10 05:08 PDT, Dave Hyatt
no flags
Better patch. (1.04 KB, patch)
2007-05-10 05:20 PDT, Dave Hyatt
mitz: review+
Dave Hyatt
Comment 1 2007-05-10 04:37:52 PDT
Created attachment 14457 [details] Reduction Reduction.
Dave Hyatt
Comment 2 2007-05-10 04:38:30 PDT
Dave Hyatt
Comment 3 2007-05-10 05:08:28 PDT
Created attachment 14459 [details] This fixes it. Any text run that gets thoroughly ignored but that contains only stripped out whitespace will have beginWS and endWS set to true. Combine that with autoWrap and you know when a break opportunity exists.
Dave Hyatt
Comment 4 2007-05-10 05:20:43 PDT
Created attachment 14460 [details] Better patch. After conversation with mitz on IRC, new patch.
mitz
Comment 5 2007-05-10 05:22:01 PDT
Comment on attachment 14460 [details] Better patch. r=me. fix indentation of the first 'if'!
Dave Hyatt
Comment 6 2007-05-10 05:30:19 PDT
Fixed in r21365.
Note You need to log in before you can comment on or make changes to this bug.