        Fix for:

<rdar://problem/5146757> REGRESSION: div that wrapped to screen width in
        tiger no longer wraps

        http://bugs.webkit.org/show_bug.cgi?id=13654

        Reviewed by mitz

        fast/text/whitespace/normal-after-nowrap-breaking.html

        * rendering/RenderBlock.cpp:
        (WebCore::RenderBlock::calcInlinePrefWidths):



Canonical link: https://commits.webkit.org/17825@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@21365 268f45cc-cd09-0410-ab3c-d52691b4dbfc